docs(valhalla): verify and enhance development analysis
- Update repository statistics with verified data from GitHub API
- Add accurate contributor rankings (23 unique contributors)
- Update component categorization with accurate PR counts
- Add detailed daily PR activity timeline (Feb-Mar 2026)
- Enhance technical challenge sections
- Add PR numbers for all referenced issues
- Update JEP 401 implementation status
- Add local contributor profile links where available
- Verify: 683 stars, 151 forks, 915KB code size
- Fix: 23 contributors (not 24)
- Add detailed breakdown by technical area:
  - C2 JIT: 15 PRs (18%)
  - Test Infrastructure: 12 PRs (14%)
  - javac/Language: 15 PRs (18%)
  - GC/Memory: 10 PRs (12%)
  - JNI: 8 PRs (9%)
  - Field Layout: 7 PRs (8%)
  - Arrays: 5 PRs (6%)
  - JFR: 4 PRs (5%)
  - Core Libs: 6 PRs (7%)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>